# comtrade-openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  ablation_context_vs_prompt.json  blog_post.md  client.py  deploy_blog.sh  deploy_hf.sh  grpo_3b_lora_collapse.json  grpo_7b_lora_5iter_saturation.json  grpo_gradient_training.jsonl  grpo_gradient_training_3b.jsonl  grpo_gradient_training_summary.json  grpo_training_metrics.jsonl  inference_results_baseline.json  llm_results_claude.json  llm_results_gpt5.json  llm_results_kimi.json  llm_results_llama.json  llm_results_qwen7b_zeroshot.json  models.py  multiseed_kimi_t9_summary.json  multiseed_llama_t9_summary.json  openenv.yaml  pyproject.toml
agent/: agent.py  conftest.py  direct_test.py  env_client.py  inference.py  plot_benchmark.py  plot_envelope.py  plot_training.py  run_baseline_grpo_sim.py  run_eval.py  run_kimi_t9_t10.py  run_multiseed.sh  smoke_test.py  train_grpo.py  train_on_lambda.sh
agent/prompts/: enhanced_events.txt
agent/tests/: test_comtrade.py  test_submission_consistency.py
blog_space/: README.md  index.html
green/: Dockerfile  README.md  agent.py  agent_a2a.py  judge_green.py  tasks_green.py
openenv_comtrade_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  comtrade_env_environment.py  judge.py  tasks.py
server/mock_service/: app.py
server/mock_service/fixtures/: README.md
